; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/serial/extr_umoscom.c_umoscom_detach.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/serial/extr_umoscom.c_umoscom_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.umoscom_softc = type { i32, i32, i32 }

@UMOSCOM_N_TRANSFER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @umoscom_detach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @umoscom_detach(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.umoscom_softc*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.umoscom_softc* @device_get_softc(i32 %4)
  store %struct.umoscom_softc* %5, %struct.umoscom_softc** %3, align 8
  %6 = load %struct.umoscom_softc*, %struct.umoscom_softc** %3, align 8
  %7 = getelementptr inbounds %struct.umoscom_softc, %struct.umoscom_softc* %6, i32 0, i32 2
  %8 = load %struct.umoscom_softc*, %struct.umoscom_softc** %3, align 8
  %9 = getelementptr inbounds %struct.umoscom_softc, %struct.umoscom_softc* %8, i32 0, i32 1
  %10 = call i32 @ucom_detach(i32* %7, i32* %9)
  %11 = load %struct.umoscom_softc*, %struct.umoscom_softc** %3, align 8
  %12 = getelementptr inbounds %struct.umoscom_softc, %struct.umoscom_softc* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @UMOSCOM_N_TRANSFER, align 4
  %15 = call i32 @usbd_transfer_unsetup(i32 %13, i32 %14)
  %16 = load i32, i32* %2, align 4
  %17 = call i32 @device_claim_softc(i32 %16)
  %18 = load %struct.umoscom_softc*, %struct.umoscom_softc** %3, align 8
  %19 = call i32 @umoscom_free_softc(%struct.umoscom_softc* %18)
  ret i32 0
}

declare dso_local %struct.umoscom_softc* @device_get_softc(i32) #1

declare dso_local i32 @ucom_detach(i32*, i32*) #1

declare dso_local i32 @usbd_transfer_unsetup(i32, i32) #1

declare dso_local i32 @device_claim_softc(i32) #1

declare dso_local i32 @umoscom_free_softc(%struct.umoscom_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
